# unifi_network_api_mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  UNIFI_NETWORK_API.md  pyproject.toml
src/unifi_network_api_mcp/: __init__.py  __main__.py  client.py  exceptions.py  models.py  server.py  settings.py
