[project]
name = "unifi-network-api-mcp"
version = "0.1.0"
description = "UniFi Network API MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
unifi-network-api-mcp = "unifi_network_api_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_network_api_mcp"]
